src/objects/BMCServiceDesk__SysQVChartView__c.object
<CustomObject>
    <description>This object allows you to store data for the Chart view of QuickViews.</description>
    <fields>
        <fullName>BMCServiceDesk__ChartDataField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKChartDataField</label>
        <referenceTo>BMCServiceDesk__SYSQVFieldInfo__c</referenceTo>
        <relationshipLabel>SysQVChartViews</relationshipLabel>
        <relationshipName>QueryChartViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChartType__c</fullName>
        <label>Chart Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipName>QueryChartViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LinesLimitAsPercent__c</fullName>
        <label>Lines Limit As Percent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LinesLowerLimit__c</fullName>
        <label>Lines Lower Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LinesUpperLimit__c</fullName>
        <label>Lines Upper Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sorting__c</fullName>
        <label>Sorting</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ValueType__c</fullName>
        <label>Value Type</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quickview Chart View</label>
    <nameField>
        <displayFormat>QVChart -{0000}</displayFormat>
        <label>QVChart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SysQVChartViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>